@@ -1,7 +1,6 @@
 package com.rental_api.ServiceBooking.config;
 
 import com.rental_api.ServiceBooking.Security.JwtAuthenticationFilter;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -17,7 +16,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableMethodSecurity
@@ -33,19 +32,32 @@ public class SecurityConfiguration {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
         http
+            // Enable CORS globally
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(AbstractHttpConfigurer::disable)
+
+            // Authorization rules
             .authorizeHttpRequests(auth -> auth
-                // 1. Preflight
+
+                // Allow preflight requests
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                // 2. Public endpoints
+                // Public authentication endpoints
                 .requestMatchers(
                         "/api/v1/auth/**",
+                        "/api/auth/**",
                         "/auth/**",
-                        "/auth/google/**",
+                        "/auth/google/**"
+                ).permitAll()
+
+                // Public APIs
+                .requestMatchers(
                         "/api/v1/public/**",
-                        "/api/v1/auth-service/**",
+                        "/uploads/**"
+                ).permitAll()
+
+                // Swagger / API Docs
+                .requestMatchers(
                         "/swagger-ui/**",
                         "/swagger-ui.html",
                         "/v3/api-docs/**",
@@ -54,62 +66,62 @@ public class SecurityConfiguration {
                         "/webjars/**"
                 ).permitAll()
 
-                // 3. Public GET access for Tutors and Classes
+                // Public GET endpoints
                 .requestMatchers(HttpMethod.GET, "/api/v1/tutors/**").permitAll()
                 .requestMatchers(HttpMethod.GET, "/api/v1/classes/**").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/v1/public/tutor-cards").permitAll()
 
-                // 4. Admin Access (Matches 'ROLE_admin')
+                // Admin endpoints
                 .requestMatchers("/api/v1/admin/**").hasRole("admin")
                 .requestMatchers("/api/categories/**").hasRole("admin")
                 .requestMatchers("/users/**").hasRole("admin")
-                .requestMatchers(HttpMethod.GET, "/provider-requests/all").hasRole("admin")
-                .requestMatchers(HttpMethod.PUT, "/provider-requests/*/status").hasRole("admin")
-                .requestMatchers(HttpMethod.GET, "/api/bookings/all").hasRole("admin")
 
-                // 5. Tutor Access (Matches 'ROLE_tutor')
+                // Tutor endpoints
                 .requestMatchers(HttpMethod.POST, "/api/v1/tutors/**").hasRole("tutor")
-                .requestMatchers(HttpMethod.PUT, "/api/v1/tutors/**").hasRole("tutor")
                 .requestMatchers(HttpMethod.POST, "/api/v1/classes/open").hasRole("tutor")
 
-                // 6. Student/Customer Access (Matches 'ROLE_student')
+                // Student endpoints
                 .requestMatchers(HttpMethod.POST, "/api/v1/bookings/**").hasRole("student")
-                .requestMatchers(HttpMethod.GET, "/api/bookings/my").hasAnyRole("student", "tutor")
 
-                // 7. Generic Authenticated paths
-                .requestMatchers("/api/services/**").authenticated()
-                .requestMatchers(HttpMethod.POST, "/provider-requests/request").authenticated()
-
-                // 8. Catch-all
+                // Everything else requires authentication
                 .anyRequest().authenticated()
             )
+
+            // Stateless session (JWT)
             .sessionManagement(session ->
-                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                    session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
+
+            // Authentication provider
             .authenticationProvider(authenticationProvider)
+
+            // JWT Filter
             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+
+            // Exception handling
             .exceptionHandling(ex -> ex
-                .authenticationEntryPoint(jwtAuthenticationEntryPoint)
-                .accessDeniedHandler(jwtAccessDeniedHandler)
+                    .authenticationEntryPoint(jwtAuthenticationEntryPoint)
+                    .accessDeniedHandler(jwtAccessDeniedHandler)
             );
 
         return http.build();
     }
 
+    // Global CORS configuration
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5500",
-            "http://127.0.0.1:5500",
-            "http://localhost:42239"
-        ));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization","Content-Type","X-Requested-With","Accept"));
-        configuration.setAllowCredentials(true);
+
+        // Allow all origins (frontend can call any endpoint)
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true); // allow cookies/auth headers
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", configuration); // apply to all endpoints
         return source;
     }
 }
